Changed to "slow roll" from "slow-roll"

--- a/abstract.tex
+++ b/abstract.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % 
 % abstract.tex - Ian Huston
-% $Id: abstract.tex,v 1.12 2009/10/15 17:35:05 ith Exp $
+% $Id: abstract.tex,v 1.13 2009/11/26 16:18:26 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: abstract.tex,v 1.12 2009/10/15 17:35:05 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: abstract.tex,v 1.13 2009/11/26 16:18:26 ith Exp $}
 % 
 % 
 \chapter*{Abstract}
@@ -19,7 +19,8 @@ of such models are described.
 First, string-theoretic models with large non-Gaussian signatures are investigated.
 % First paper
 An upper bound is placed on the amplitude of primordial gravitational waves produced by ultra-violet
-Dirac-Born-Infeld inflation. In all but the most finely tuned cases this bound is incompatible with
+Dirac-Born-Infeld inflation. In all but the most finely tuned cases, this bound is
+incompatible with
 a lower bound derived for inflationary models which exhibit a red spectrum and detectable
 non-Gaussianity. 
 
@@ -64,7 +65,7 @@ The second method of constraining inflationary models is the numerical calculati
 of second order perturbations for a general class of single field models.
 The Klein-Gordon equation at second order, written in terms
 of scalar field variations only, is numerically solved. 
-The slow-roll version of the second order source term is used and the method is
+The slow roll version of the second order source term is used and the method is
 shown to be extendable to the full equation.
 This procedure allows the evolution of second order
 perturbations in general and the calculation of the non-Gaussianity parameter in
