--- a/dbi/dbi-intro.tex
+++ b/dbi/dbi-intro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % dbi-intro.tex - Ian Huston
-% $Id: dbi-intro.tex,v 1.59 2009/11/20 16:08:14 ith Exp $
+% $Id: dbi-intro.tex,v 1.60 2009/11/26 16:18:25 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.59 2009/11/20 16:08:14 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.60 2009/11/26 16:18:25 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -384,7 +384,7 @@ coordinates $\xi^a$ for $a=0,\ldots,p$. This is the general form of the DBI
 action which will be used later.
 
 
-In the simplest versions of slow-roll inflation, only a single scalar field
+In the simplest versions of slow roll inflation, only a single scalar field
 with a
 sufficiently flat potential is required to satisfy the slow roll conditions outlined
 in
