--- a/dbi/dbi.tex
+++ b/dbi/dbi.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % dbi.tex - Ian Huston
-% $Id: dbi.tex,v 1.65 2009/11/20 15:53:37 ith Exp $
+% $Id: dbi.tex,v 1.66 2009/11/26 16:18:26 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.65 2009/11/20 15:53:37 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.66 2009/11/26 16:18:26 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -189,7 +189,7 @@ from the epoch of observable inflation until inflation ends.
 
 
 Typically, one expects $30 \lesssim {\Neff} \lesssim 60$, 
-although smaller values may be possible if the slow-roll conditions are 
+although smaller values may be possible if the slow roll conditions are 
 violated after observable scales have crossed the horizon. 
 Furthermore, $N \gg 1$ is necessary 
 for backreaction effects to be negligible \cite{bmpaper}. 
@@ -479,7 +479,7 @@ compatible with condition (\ref{eq:halfbound}) if
 \nnleq \simeq -2s > -3 (1-n_s ) \fnleq > -0.078 \fnleq \,.
 \end{equation}
 % 
-However, when $-\fnleq \gg 1$, this would violate the slow-roll conditions
+However, when $-\fnleq \gg 1$, this would violate the slow roll conditions
 that must be satisfied for a consistent 
 derivation of the perturbation spectra 
 (\ref{eq:spectra-dbiintro}). For example, the conservative 
@@ -519,7 +519,7 @@ as implied by the inequality (\ref{eq:standardbound}), the
 data strongly favours a red spectral index with $n_s < 0.974$,
 and this violates the condition (\ref{eq:lowerbound}). A significant 
 detection of a red spectral index requires either a 
-violation of the slow-roll conditions or a sufficiently 
+violation of the slow roll conditions or a sufficiently 
 small value for the volume of $X_5$. 
 In particular, combining the limits
 (\ref{eq:upperbound}) and (\ref{eq:lowerbound}) results in the condition 
@@ -1147,7 +1147,7 @@ or the form of the warp factor is unlikely to resolve this discrepancy.
 On the other hand, there are a number of possible ways of reconciling  
 theory with observation. In general, 
 either the upper or lower limit on $r$ needs to be relaxed. 
-Weakening the latter would require a violation of the slow-roll 
+Weakening the latter would require a violation of the slow roll 
 conditions or a blue spectral index. 
 A value of $n_s >1$ is compatible with WMAP5 if the running of the 
 spectral index 
