--- a/mainintro.tex
+++ b/mainintro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % mainintro.tex - Ian Huston
-% $Id: mainintro.tex,v 1.62 2009/11/20 16:08:14 ith Exp $
+% $Id: mainintro.tex,v 1.63 2009/11/26 16:18:26 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.62 2009/11/20 16:08:14 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.63 2009/11/26 16:18:26 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -299,7 +299,7 @@ $1/\H$.
 In this section we introduce the inflationary scenario. First we briefly
 describe how it solves two major problems with the standard Big Bang
 picture: the flatness problem and the horizon problem \cite{book:liddle}. We go on to
-describe canonical slow-roll inflation, the generation of
+describe canonical slow roll inflation, the generation of
 perturbations from quantum fluctuations and inflation from non-canonical
 actions.
 
@@ -521,9 +521,9 @@ then taking $|\eta_H|\ll 1$ will ensure that $\dot{\vp}$ and $\varepsilon_H$
 change slowly, allowing inflation to last longer.
 
 The approximations $\varepsilon_H\ll 1$ and $|\eta|\ll 1$ are known as the
-slow-roll conditions because they force the inflaton field $\vp$ to roll down
+slow roll conditions because they force the inflaton field $\vp$ to roll down
 the potential $V$ slowly. The parameters $\varepsilon_H$ and $\eta_H$ are known as
-slow-roll parameters. Setting $\ddot{\vp}$ to be small is equivalent to
+slow roll parameters. Setting $\ddot{\vp}$ to be small is equivalent to
 making the friction $H\dot{\vp}$ in \eq{eq:phieom1-intro} dominant. With
 these approximations the
 equations of motion for a slowly rolling field become
@@ -754,7 +754,7 @@ where $\U$ is the background value of the potential $V(\vp)$.
 %
 % \addtodo{Check that the Mukhanov eqn is equivalent} 
 % If we know assume that $\varepsilon_H \ll1 $ and $|\eta_H|\ll1$ then we get the
-% slow-roll form of this equation:
+% slow roll form of this equation:
 % % 
 % \begin{equation}
 %  \label{eq:fokg-sr-intro}
@@ -870,10 +870,10 @@ Thus the full solution in de Sitter space is \cite{book:liddle}
 \end{equation}
 % 
 Inflation in spacetimes that are close to de Sitter will contain perturbations
-with a spectrum defined by \eq{eq:wfinal-intro}. The slow-roll approximation is
+with a spectrum defined by \eq{eq:wfinal-intro}. The slow roll approximation is
 enough to ensure that inflation occurs in a quasi-de Sitter spacetime.
 However, the initial conditions for Fourier modes in \eq{eq:subhsoln-intro}
-apply to non slow-roll models so long as they are applied well before horizon
+apply to non slow roll models so long as they are applied well before horizon
 crossing.
 
 
@@ -919,7 +919,7 @@ and the dimensionless power spectrum
 P_{\R}^2(k)\,.
 \end{equation}
 
-A slow-roll inflation model in a quasi-de Sitter spacetime will have the
+A slow roll inflation model in a quasi-de Sitter spacetime will have the
 Fourier mode solution given in \eq{eq:wfinal-intro}. 
 After horizon crossing, when $k\gg aH$, this gives $|w|^2 = 1/(2k^3 \eta^2)$ so 
 % 
@@ -969,7 +969,7 @@ on $k$. The tensor-scalar ratio can also be written in terms of $\varepsilon_H$:
 \label{eq:rslowroll-intro}
  r = 16 \varepsilon_H\,.
 \end{equation}
-As $\varepsilon_H\ll1$ for slow-roll models of inflation the amplitude of tensor
+As $\varepsilon_H\ll1$ for slow roll models of inflation the amplitude of tensor
 perturbations that these models produce is much smaller than the amplitude of
 curvature perturbations. This consistency relation is extremely important for
 testing models of inflation. The detection of a significant tensor mode signal
@@ -1152,7 +1152,7 @@ kinetic function $P$ and its derivatives \cite{lidser1,lidser3}:
 % 
 The first parameter, $c_s$, is called the sound speed of the fluctuations
 in the inflaton field. This can be significantly less than unity, 
-in contrast to slow-roll inflation driven by a canonical 
+in contrast to slow roll inflation driven by a canonical 
 field such that $c_s = P_{,X} =1$.
 % 
 Christopherson and Malik showed in \Rref{Christopherson:2008ry} that $c_s$
@@ -1290,7 +1290,7 @@ of the gravitational potential to the curvature perturbation are expected to
 produce $\fnlloc$ of order one which would be much larger than the
 $O(\varepsilon_H)$ contributions from single field slow roll inflation
 \cite{Bartolo:2004if, Komatsu:2008hk}. Any detection of $\fnlloc$ at greater
-than $O(1)$ would present a challenge to such single field slow-roll models. 
+than $O(1)$ would present a challenge to such single field slow roll models. 
 The current bounds on the non-Gaussianity parameter are not strong but have
 been steadily tightening. The WMAP5 bound on the local form of $\fnl$ is
 % 
