--- a/numerical/perts.tex
+++ b/numerical/perts.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % numerical-intro.tex - Ian Huston
-% $Id: perts.tex,v 1.29 2009/11/12 23:42:11 ith Exp $
+% $Id: perts.tex,v 1.30 2009/11/26 16:18:26 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: perts.tex,v 1.29 2009/11/12 23:42:11 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: perts.tex,v 1.30 2009/11/26 16:18:26 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
@@ -546,7 +546,7 @@ This involves taking
 \end{align}
 %
 such that $Q=0$ and $\H^2 = (8\pi G/3) a^2 \U$. 
-In Chapter~\ref{ch:introduction} the slow-roll parameter $\varepsilon_H$ was
+In Chapter~\ref{ch:introduction} the slow roll parameter $\varepsilon_H$ was
 defined in \eq{eq:epsilonHdefn-intro}. 
 In this chapter and the rest of Part~\ref{part:numerical}, a different slow 
 roll parameter will be used, denoted by
