Changed to Gauss.

--- a/numerical/perts.tex
+++ b/numerical/perts.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % numerical-intro.tex - Ian Huston
-% $Id: perts.tex,v 1.30 2009/11/26 16:18:26 ith Exp $
+% $Id: perts.tex,v 1.31 2009/11/26 16:22:53 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: perts.tex,v 1.30 2009/11/26 16:18:26 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: perts.tex,v 1.31 2009/11/26 16:22:53 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
@@ -648,7 +648,7 @@ $\R_1
 = \H\dvp1/\vp_0'$. The second order part includes terms quadratic in $\dvp1$ and so
 in Fourier space requires convolutions. We are interested in the value of $\R$ after
 horizon crossing for the calculation of $\Pr$ and a determination of the
-non-gaussianity produced during inflation. This allows us to neglect gradient terms
+non-Gaussianity produced during inflation. This allows us to neglect gradient terms
 in real space or terms proportional to $k$ in Fourier space.
 In this limit the real space expression for $\R_2$ is \cite{Malik:2005cy}
 % 
@@ -679,7 +679,7 @@ Once the numerical calculation has been carried out at first and second order as
 described in Chapter~\ref{ch:numericalsystem} this quantity can be evaluated after
 horizon crossing.
 
-In Chapter~\ref{ch:introduction} the non-gaussianity parameter $\fnlloc$ was defined
+In Chapter~\ref{ch:introduction} the non-Gaussianity parameter $\fnlloc$ was defined
 in terms of $\R$ in \eq{eq:fnllocdefn-intro}. Writing \eq{eq:fnllocdefn-intro} in
 Fourier space using \eq{eq:Rfulldefn-perts} implies that
 % 
@@ -693,7 +693,7 @@ Fourier space using \eq{eq:Rfulldefn-perts} implies that
 \end{align}
 % 
 where $\langle \rangle$ denotes the expectation value.
-A good approximation of the local non-gaussianity produced is then given by
+A good approximation of the local non-Gaussianity produced is then given by
 % 
 \begin{align}
  \label{eq:fnlloc-perts}
@@ -706,7 +706,7 @@ A good approximation of the local non-gaussianity produced is then given by
 % 
 Calculating $\dvp2$ and $\R_2$ therefore provides direct insight into the behaviour
 and
-production of the non-gaussianity parameter $\fnlloc$. 
+production of the non-Gaussianity parameter $\fnlloc$. 
 
 % 
 % 
