Changed capitalisation of titles.

--- a/dbi/dbi-intro.tex
+++ b/dbi/dbi-intro.tex
@@ -1,13 +1,13 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % dbi-intro.tex - Ian Huston
-% $Id: dbi-intro.tex,v 1.60 2009/11/26 16:18:25 ith Exp $
+% $Id: dbi-intro.tex,v 1.61 2009/11/26 16:29:09 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.60 2009/11/26 16:18:25 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.61 2009/11/26 16:29:09 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
-\chapter{Introduction to Dirac Born Infeld Inflation}
+\chapter{Introduction to Dirac-Born-Infeld Inflation}
 \label{ch:dbi-intro}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
