--- a/dbi/dbi.tex
+++ b/dbi/dbi.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % dbi.tex - Ian Huston
-% $Id: dbi.tex,v 1.66 2009/11/26 16:18:26 ith Exp $
+% $Id: dbi.tex,v 1.67 2009/11/26 16:29:09 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.66 2009/11/26 16:18:26 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.67 2009/11/26 16:29:09 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -959,7 +959,7 @@ next chapter.
  \centering
  \includegraphics[width=0.8\textwidth]{./dbi/graphs/dbi-review.pdf}
  % dbi-review.pdf: 498x327 pixel, 72dpi, 17.57x11.54 cm, bb=0 0 498 327
- \caption{A schematic of recent DBI inspired models}
+ \caption[Recent DBI Inspired Models]{A schematic of recent DBI inspired models}
  \label{fig:review-dbi}
 \end{figure}
 % 
