--- a/dbi/multibrane.tex
+++ b/dbi/multibrane.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % multibrane.tex - Ian Huston
-% $Id: multibrane.tex,v 1.60 2009/11/20 16:08:14 ith Exp $
+% $Id: multibrane.tex,v 1.61 2009/11/26 16:29:09 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.60 2009/11/20 16:08:14 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.61 2009/11/26 16:29:09 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -391,7 +391,7 @@ results in a kinetic function satisfying $l \le 1/2$.
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
-\section{The Multiple Coincident Brane Model} 
+\section{The Multi-Coincident Brane Model} 
 \label{sec:multibranes-multi}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
