--- a/mainintro.tex
+++ b/mainintro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % mainintro.tex - Ian Huston
-% $Id: mainintro.tex,v 1.63 2009/11/26 16:18:26 ith Exp $
+% $Id: mainintro.tex,v 1.64 2009/11/26 16:29:09 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.63 2009/11/26 16:18:26 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.64 2009/11/26 16:29:09 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -303,7 +303,7 @@ describe canonical slow roll inflation, the generation of
 perturbations from quantum fluctuations and inflation from non-canonical
 actions.
 
-\subsection{Problems with the Big Bang scenario}
+\subsection{Problems with the Big Bang Scenario}
 Although remarkably successful in describing the evolution of the universe from
 very early in its history, the standard Big Bang scenario suffers from a number
 of serious problems. Two of the main problems are described in this section.
@@ -360,7 +360,7 @@ yet they could not have been in causal contact since the Big Bang.
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
-\subsection{Inflation and Canonical Slow-roll}
+\subsection{Inflation and Canonical Slow Roll}
 \label{sec:slowroll-intro}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
