Changed figure short titles

--- a/mainintro.tex
+++ b/mainintro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % mainintro.tex - Ian Huston
-% $Id: mainintro.tex,v 1.64 2009/11/26 16:29:09 ith Exp $
+% $Id: mainintro.tex,v 1.65 2009/11/26 16:53:40 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.64 2009/11/26 16:29:09 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: mainintro.tex,v 1.65 2009/11/26 16:53:40 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -416,7 +416,7 @@ scales we measure today were previously inside the horizon.
 % 
 \begin{figure}[htbp]
  \includegraphics[width=\textwidth]{graphs/scales.pdf}
- \caption[Comoving scales and the Hubble radius]{Comoving scales that have recently
+ \caption[Comoving Scales and the Hubble Radius]{Comoving scales that have recently
 entered the horizon would
 previously have been inside the horizon if the inflationary period extended far
 enough into the past.}
